Updated contact details
- Deleted phonenumber (request of broersma)

--- a/index.html
+++ b/index.html
@@ -158,10 +158,6 @@
                     <div class="socialsBlock purpleSection">
                       <a class="sr-button inline button-1 button-small circled"><i class="fa fa-envelope"></i> Email us </a>   
                       </div>
-                      <p><span>
-                        Give us a call <a href="tel:+31-20-308-00-68">+31-20-308-00-68</a>
-                      </span>
-                      </p>
                       <a class="sr-button inline button-1 button-small circled" href="#reqdemo"><i class="fa fa-rocket"></i> Request free access</a>
                     </div>
 
@@ -1011,18 +1007,13 @@
               <div class="spacer-medium"></div>
               !-->
              <div class="column one-half">
+             <div class="spacer-small"></div>
               <p>
               <strong>
               Visit us <br>
               </strong>
               Burgerweeshuispad 201, 1076 GR <br>
               Amsterdam, the Netherlands 
-            </p>
-              <p>
-              <strong>
-              Call us <br>
-              </strong>
-              <a href="tel:+31203080068">+31 20 308 00 68</a>
             </p>
               <p>
               <strong>
