--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:image" content="/img/lt-logo.png">
         <meta property="og:image:width" content="100" />
 		<meta property="og:image:height" content="100" />
-        <meta property="og:url" content="http://www.legalthings.io/index.html">
+        <meta property="og:url" content="http://www.legalthings.io/">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- FONTS -->
         <!--link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"!-->
