--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <strong>
                             Visit us <br>
                         </strong>
-                        Burgerweeshuispad 201, 1076 GR <br>
+                        Van Diemenstraat 20-200, 1013 CN <br>
                         Amsterdam, the Netherlands
                     </p>
                     <p>
@@ -317,7 +317,7 @@
                 </div>
                 <div class="column one-half last-col">
                     <div class="align-center button-mob">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2437.704869617884!2d4.8543553159023825!3d52.339499979780506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5e1f65ea50e4d%3A0xe8f2106a22cace15!2sLegalThings!5e0!3m2!1sen!2snl!4v1524060130344" width="75%" height="222px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2434.9385425086684!2d4.889364021650256!3d52.3896644183283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c60907bba5e621%3A0xef30a4a76f533009!2sProofi!5e0!3m2!1snl!2snl!4v1574850401617!5m2!1snl!2snl" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
             </div>
