--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     fillthedoc is a powerful tool to fetch data from multiple systems and processes into one - or more documents.
                 </p>
                 <div class="spacer-medium"></div>
-                <a href="https://lto.network" target="_blank" class="sr-button button-1 button-small circled"> Check out fillthedoc</a>
+                <a href="https://fillthedoc.com" target="_blank" class="sr-button button-1 button-small circled"> Check out fillthedoc</a>
             </div>
 
         </div>
